wip: changing main.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,8 @@ dev = [
     "scikit-learn",
     "pre-commit", 
     "ruff",
-    "mypy"
+    "mypy",
+    "lxml"
 ]
 docs = [
     "numpydoc==1.8.0",
